# mof-sanity-pipeline

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-entrypoint.sh  generate_entrypoint.sh
code/: charge_assigner.py  graph.py  jmolnn_update.py  ligand.py  postprocessing_table_creation.py  preprocessing.py  process_tracker.py  sanity_runner  utils.py
code/framechecker/: LICENSE  __init__.py  cli.py  definitions.py  errors.py  structure_graph_creator.py  types.py  utils.py  version.py
code/framechecker/checks/: __init__.py  charge_check.py  check_base.py  floating_solvent.py  zeopp.py
code/framechecker/checks/data/: __init__.py  definitions.py
code/framechecker/checks/global_structure/: __init__.py  graphcheck.py
code/framechecker/checks/local_structure/: __init__.py  base_coordination_check.py  base_missing_check.py  false_oxo.py  geometrically_exposed_metal.py  geometry.py  overcoordinated_carbon.py  overcoordinated_hydrogen.py  overcoordinated_nitrogen.py  overlapping_atoms.py  undercoordinated_alkaline.py  undercoordinated_carbon.py  undercoordinated_nitrogen.py  undercoordinated_rare_earth.py
code/framechecker/checks/oms/: __init__.py  definitions.py  errors.py
code/framechecker/checks/utils/: __init__.py  geometry.py  get_indices.py
code/framechecker/symmetry/: __init__.py  hash.py
libcif/: .gitignore  CMakeLists.txt  README.md
libcif/examples/: CMakeLists.txt  README.md  build_but.cpp  build_fex.cpp  build_sifsix.cpp  build_uit.cpp  calc_charge.cpp  cif_check.cpp  cif_check_v2.cpp  cif_hash.cpp  cif_ok.cpp  cif_ok_v2.cpp  cif_prim_spg.cpp  cif_quality.cpp  cif_to_building_blocks_v2.cpp  cif_to_building_blocks_v3.cpp  example_description.txt
libcif/examples/legacy/: canon_order.cpp  cif_hash_multi.cpp  cif_ok_multi_test.cpp  cif_to_linker.cpp  cif_to_linker_v2.cpp  cif_to_linker_xyz.cpp  determine_charge.cpp  make_999.cpp  make_chromosome.cpp  mutate.cpp
libcif/include/libcif/: build_ops.hpp  building_blocks.hpp  cif.hpp  cif_ops.hpp  data_tables.hpp  graph_ops.hpp  linalg.hpp  mutation_ops.hpp  obabel_wrappers.hpp  rdkit_wrappers.hpp  spglib_wrappers.hpp  transform_ops.hpp  utils.hpp
libcif/scripts/: cif_structure_to_xyz.py  compare_building_block_outputs.py  libcif_run.py  xyz_to_smiles.py
libcif/src/: build_ops.cpp  cif.cpp  cif_ops.cpp  graph_ops.cpp  mutation_ops.cpp  obabel_wrappers.cpp  rdkit_wrappers.cpp  spglib_wrappers.cpp  transform_ops.cpp
oxichecker/: README.md  entrypoint.sh  fragment_analyzer.py  linker_analyzer.py  main.py
scripts/: run_cli_smoke.sh
test/fixtures/smoke/: oxichecker_results.csv  sanity_results.csv
test/fixtures/smoke/results/qmof-019ba28/: qmof-019ba28__framechecker.json  qmof-019ba28__libcif.json  qmof-019ba28__oxichecker.json  qmof-019ba28__platon.json
test/fixtures/smoke/results/qmof-0564294/: qmof-0564294__framechecker.json  qmof-0564294__libcif.json  qmof-0564294__oxichecker.json  qmof-0564294__platon.json
test/fixtures/smoke/results/qmof-07f2261/: qmof-07f2261__framechecker.json  qmof-07f2261__libcif.json  qmof-07f2261__oxichecker.json  qmof-07f2261__platon.json
test/fixtures/smoke/results/qmof-0c80dbf/: qmof-0c80dbf__framechecker.json  qmof-0c80dbf__libcif.json  qmof-0c80dbf__oxichecker.json  qmof-0c80dbf__platon.json
test/fixtures/smoke/results/qmof-1c6930e/: qmof-1c6930e__framechecker.json  qmof-1c6930e__libcif.json  qmof-1c6930e__oxichecker.json  qmof-1c6930e__platon.json
test/fixtures/smoke/results/qmof-1cf625b/: qmof-1cf625b__framechecker.json  qmof-1cf625b__libcif.json  qmof-1cf625b__oxichecker.json  qmof-1cf625b__platon.json
test/fixtures/smoke/results/qmof-201af6e/: qmof-201af6e__framechecker.json  qmof-201af6e__libcif.json  qmof-201af6e__oxichecker.json  qmof-201af6e__platon.json
test/fixtures/smoke/results/qmof-25323e3/: qmof-25323e3__framechecker.json  qmof-25323e3__libcif.json  qmof-25323e3__oxichecker.json  qmof-25323e3__platon.json
test/fixtures/smoke/results/qmof-2c14e85/: qmof-2c14e85__framechecker.json  qmof-2c14e85__libcif.json  qmof-2c14e85__oxichecker.json  qmof-2c14e85__platon.json
test/fixtures/smoke/results/qmof-2f9c233/: qmof-2f9c233__framechecker.json  qmof-2f9c233__libcif.json  qmof-2f9c233__oxichecker.json  qmof-2f9c233__platon.json
test/fixtures/smoke/results/qmof-380c3ba/: qmof-380c3ba__framechecker.json  qmof-380c3ba__libcif.json  qmof-380c3ba__oxichecker.json  qmof-380c3ba__platon.json
test/fixtures/smoke/results/qmof-385daac/: qmof-385daac__framechecker.json  qmof-385daac__libcif.json  qmof-385daac__oxichecker.json  qmof-385daac__platon.json
test/fixtures/smoke/results/qmof-3870e19/: qmof-3870e19__framechecker.json  qmof-3870e19__libcif.json  qmof-3870e19__oxichecker.json  qmof-3870e19__platon.json
test/fixtures/smoke/results/qmof-3a0f684/: qmof-3a0f684__framechecker.json  qmof-3a0f684__libcif.json  qmof-3a0f684__oxichecker.json  qmof-3a0f684__platon.json
test/fixtures/smoke/stage1/: sanity_results.csv
test/fixtures/smoke_no_platon/: sanity_results.csv
test/fixtures/smoke_no_platon/stage1/: sanity_results.csv
test/test_cifs/: qmof-019ba28.cif  qmof-0564294.cif  qmof-07f2261.cif  qmof-0c80dbf.cif  qmof-1c6930e.cif  qmof-1cf625b.cif  qmof-201af6e.cif  qmof-25323e3.cif  qmof-2c14e85.cif  qmof-2f9c233.cif  qmof-380c3ba.cif  qmof-385daac.cif  qmof-3870e19.cif  qmof-3a0f684.cif  qmof-5564e79.cif  qmof-55dca9b.cif  qmof-5d60ff1.cif  qmof-5e1f138.cif  qmof-6070de9.cif  qmof-6c1f31f.cif  qmof-7d69ad1.cif  qmof-8782178.cif  qmof-886aa55.cif  qmof-8893f42.cif  qmof-8955ecc.cif  qmof-8c6011b.cif  qmof-9184c9f.cif  qmof-92554a4.cif  qmof-94a4870.cif  qmof-96226c0.cif  qmof-9b20de3.cif  qmof-9b53dfb.cif  qmof-a0884cd.cif  qmof-a42fc49.cif  qmof-a433d62.cif  qmof-acc8248.cif  qmof-b65c1f5.cif  qmof-be3b6cf.cif  qmof-c702b6f.cif  qmof-c7a9c33.cif  (+16 more)
(+158 files in other folders)
